# cloud-cspm

./: .gitignore  CODEX_HANDOFF.md  CONTRIBUTING.md  IDEAS.md  LICENSE  README.md  SECURITY.md  check_iam.py  check_s3.py  cspm.py  pyproject.toml  requirements.txt  research_notes.txt
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
policies/: cis_aws.yaml  lambda_best_practices.yaml  secretsmanager_best_practices.yaml
reports/: generator.py
samples/: demo-report.csv  demo-report.json  demo-report.sarif
scanners/: __init__.py  base_scanner.py  ec2_scanner.py  iam_scanner.py  lambda_scanner.py  logging_scanner.py  rds_scanner.py  s3_scanner.py  secretsmanager_scanner.py
scripts/: generate_sample_artifacts.py
tests/: test_cspm.py  test_integration_moto.py  test_scanners.py  test_secretsmanager_scanner.py
